UtahLiveDataTest/src/objects/Award__c.object
<CustomObject>
    <description>[Business] Stores the information related to the Award</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>this is used on NoGA froms</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Awards</relationshipLabel>
        <relationshipName>Awards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acknowledgement__c</fullName>
        <label>Acknowledgement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ActiveBudgetYear__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Active Budget Year</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Addressline1__c</fullName>
        <description>This Stores Street of Primary Place of Performance</description>
        <label>Address line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Addressline2__c</fullName>
        <label>Address line 2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdministrationAcronym__c</fullName>
        <label>Administration Acronym</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Administration__c</fullName>
        <description>ProgramCode__r.AdministrationAcronym__c</description>
        <formula>null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Administration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement1__c</fullName>
        <description>This field is used in Grantor Award (NOGA)  form</description>
        <label>Agreement1</label>
        <length>22768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agreement2__c</fullName>
        <description>This field is used in Grantor:Award Notification form.</description>
        <label>Agreement2</label>
        <length>22768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agreement3__c</fullName>
        <description>This field is used in Grantor: Assurances and Certifications form.</description>
        <label>Agreement3</label>
        <length>22768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AllocatedAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>AllocatedAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AllocationDifferenceCurrentProposed__c</fullName>
        <formula>AllocatedAmount__c -  CurrentAllocatedAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AllocationDifferenceCurrentProposed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AllocationMatchUpdatedAllocation__c</fullName>
        <formula>IF(AllocatedAmount__c != CurrentAllocatedAmount__c, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AllocationMatchUpdatedAllocation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AmendedPurchaseOrderNumber__c</fullName>
        <label>Amended Purchase Order Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AmendedRequisitionNumber__c</fullName>
        <label>Amended Requisition Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AmendmentSequence__c</fullName>
        <inlineHelpText>Stores the amendment number for each award.</inlineHelpText>
        <label>AmendmentSequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AmendmentStatus__c</fullName>
        <label>Amendment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Issued</fullName>
                    <default>true</default>
                    <label>Not Issued</label>
                </value>
                <value>
                    <fullName>Budget Change In Progress</fullName>
                </value>
                <value>
                    <fullName>No Cost Extension In Progress</fullName>
                </value>
                <value>
                    <fullName>Cost Extension In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AmendmentType__c</fullName>
        <label>Amendment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Supplemental</fullName>
                </value>
                <value>
                    <fullName>Extension Without Funds</fullName>
                </value>
                <value>
                    <fullName>Admin Changes</fullName>
                </value>
                <value>
                    <fullName>Transfer of Award</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amendments__c</fullName>
        <label>Amendments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AmountAwardedThisBudgetPeriod__c</fullName>
        <description>Auto populated.</description>
        <inlineHelpText>Dollar amount of funds &apos;Issued&apos; to the grant, in the current budget period.</inlineHelpText>
        <label>Amount Awarded This Budget Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AmountAwardedToDate__c</fullName>
        <description>Auto populated</description>
        <inlineHelpText>Cumulative dollar amount of funds &apos;Issued&apos; to the grant, till date.</inlineHelpText>
        <label>Amount Awarded to Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AmountDirectAssistanceCumulativePrior__c</fullName>
        <label>AmountDirectAssistance Cumulative Prior</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AmountDirectAssistanceThisAction__c</fullName>
        <description>Amount of direct assistance to be awarded to a grantee during a given budget period.</description>
        <label>Amount Direct Assistance This Action</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AmountDirectAssistance__c</fullName>
        <description>Total Direct Assistance amount involved in a grant transaction. [Need help with this definition]</description>
        <label>Amount Direct Assistance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AmountDirectCost__c</fullName>
        <description>Total value of the grant (not the award) in the specified budget period. [Need help with thisdefinition]</description>
        <label>Amount Direct Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AmountFederalShare__c</fullName>
        <description>This calculates Federal Share</description>
        <formula>(TotalObligateAmount__c - GrantAwardStateShare__c)/ TotalObligateAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>State share percentage of the total project cost</inlineHelpText>
        <label>Federal Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AmountFinancialAssistanceThisAction__c</fullName>
        <description>Allow user to enter a dollar amount. This is the funding amount being awarded to the grantee, in the award at hand.</description>
        <label>Amount Financial Assistance This Action</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AmountIndirectCost__c</fullName>
        <description>Sum of all individually-calculated indirect costs (indirect base times indirect rate), or a lump sum amount that is included for indirect costs. This is a calculated field.</description>
        <label>Amount Indirect Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AmountNonFederalShare__c</fullName>
        <description>Net award amount after the non-federal contribution has been subtracted from the total approved amount. Share, identified by the grantee, of the non-federal resources available to support the program. This is a calculated field.</description>
        <label>Amount Non Federal Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AmountProgramIncome__c</fullName>
        <description>Projected amount of income generated by the program during a specified budget period.</description>
        <label>Amount Program Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AmountUnawardedDirectAssistanceBalance__c</fullName>
        <description>Amount of direct assistance funding remaining (not yet awarded) for the current fiscal year or budget period. [Need help with this definition]</description>
        <label>AmountUnawardedDirect Assistance Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AmountUnobligatedCarryover__c</fullName>
        <description>Amount of money carried over from a previous budget period that is not yet obligated. Reauthorization of unspent funds from prior years for additional activities.</description>
        <label>Amount Unobligated Carryover</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AmountUnobligatedOffset__c</fullName>
        <description>Amount of money offset from a previous budget period that is not yet obligated. These dollars are deducted from the federal share for this budget period.</description>
        <label>Amount Unobligated Offset</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AnnouncementNumber__c</fullName>
        <formula>Application__r.Announcement__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AnnouncementNumber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Announcement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Announcement</label>
        <referenceTo>Announcement__c</referenceTo>
        <relationshipLabel>Awards</relationshipLabel>
        <relationshipName>Awards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AppType__c</fullName>
        <formula>CASE(TEXT(Application__r.ApplicationType__c),&apos;New&apos;, &apos;New&apos;,&apos;Renewal&apos;,&apos;Renewal&apos;,&apos;Continuation&apos;,&apos;Continuation&apos;,&apos;Revision&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AppType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationPOC__c</fullName>
        <label>ApplicationPOC</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ApplicationTitle__c</fullName>
        <formula>Application__r.Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ApplicationTitle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationType__c</fullName>
        <formula>TEXT(Application__r.ApplicationType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ApplicationType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Awards</relationshipLabel>
        <relationshipName>Awards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ApprovedIndirectCostRate__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Indirect cost rate drives the distribution of categories in Award</description>
        <label>Approved Indirect Cost Rate(%)</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ApprovedInternally__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the budget revision is approved internally, return true so that if external approval is needed it can run</description>
        <label>ApprovedInternally</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApprovedbyODon__c</fullName>
        <label>Approved by OD on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Final Approver for the Award</inlineHelpText>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Awards4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AreTCspartofNGAAttachments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are T&amp;Cs part of Attachments?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AssurancesAgreed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assurances Agreed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AssurancesDecision__c</fullName>
        <label>Assurances Terms and Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I read the terms and agree</fullName>
                </value>
                <value>
                    <fullName>I read the terms and do not agree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AssurancesDisagreed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assurances Disagreed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assurances__c</fullName>
        <label>Assurances</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AuditDecision__c</fullName>
        <label>Audit Decision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Authorization__c</fullName>
        <label>Authorization</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AuthorizedRepresentativeEmail__c</fullName>
        <label>Authorized Representative Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AuthorizedRepresentativeLastName__c</fullName>
        <label>Authorized Representative Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuthorizedRepresentativeName__c</fullName>
        <label>Authorized Representative Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuthorizedRepresentativePhone__c</fullName>
        <label>Authorized Representative Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AuthorizedRepresentativeTitle__c</fullName>
        <label>Authorized Representative Title</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AwardAmountThisAction__c</fullName>
        <formula>ObligatedAwardAmount__c -  PriorAwardedAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AwardAmountThisAction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AwardAmount__c</fullName>
        <label>Award Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AwardApprover1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Award Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Awardshro6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AwardApprover2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Award Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Awardshrok</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AwardBurnRate__c</fullName>
        <description>This field is used in Reports to determine the burn rate for an award</description>
        <formula>IF(NoOfMonthsOfBudgetPeriod__c = 0 , 
           0, 
           AwardedAmountthisAction__c /NoOfMonthsOfBudgetPeriod__c )</formula>
        <label>Award Burn Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AwardIssueDateWithNoTime__c</fullName>
        <formula>DATEVALUE(AwardIssueDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Award Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AwardIssueDate__c</fullName>
        <description>Date the award was issued.</description>
        <inlineHelpText>Issue Date of Award</inlineHelpText>
        <label>Award Issue Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AwardNegotiated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It will check whether award is created from negotiation or FDM</description>
        <label>Award Negotiated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AwardNumber__c</fullName>
        <description>Used to store increment based on Grant</description>
        <inlineHelpText>Award Indentifier</inlineHelpText>
        <label>Award Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AwardReleaseDate__c</fullName>
        <description>Date the award was released.</description>
        <label>Award Release Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AwardType__c</fullName>
        <description>From App = New / Supplemental / Renewal
From Progress Report = Non-Competing Continuation
From Amendment Request = Administrative
From Grant = All Others</description>
        <inlineHelpText>Type of Award</inlineHelpText>
        <label>Award Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Amendment</fullName>
                </value>
                <value>
                    <fullName>Continuation</fullName>
                </value>
                <value>
                    <fullName>Close Out/Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AwardedAmountRollup__c</fullName>
        <description>Used on Award view to add the values of the award budget categories for the award.</description>
        <label>AwardedAmountRollup</label>
        <summarizedField>AwardBudgetCategory__c.CurrentApprovedBudgetAmount__c</summarizedField>
        <summaryForeignKey>AwardBudgetCategory__c.Award__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AwardedAmount__c</fullName>
        <formula>ObligatedAwardAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Awarded Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AwardedAmountthisAction__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Awarded Amount this Action</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BriberyDecision__c</fullName>
        <label>Bribery Decision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BudgetNarrativeRead__c</fullName>
        <description>Running explanation/justification of budget. Read only.</description>
        <label>BudgetNarrativeRead</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BudgetNarrativeWrite__c</fullName>
        <description>Running explanation/justification of Budget. Read/Write.</description>
        <label>BudgetNarrativeWrite</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BudgetPeriodEndDate__c</fullName>
        <description>Budget Period End Date for the award.</description>
        <label>Budget Period End Date(obsolete)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BudgetPeriodEndDates__c</fullName>
        <description>This field is used in Award trigger</description>
        <formula>BudgetPeriod__r.BudgetEndDate__c</formula>
        <label>Budget Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BudgetPeriodStartDate__c</fullName>
        <description>Budget Period Start Date for the award.</description>
        <label>Budget Period Start Date (Obsolete)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BudgetPeriodStartDates__c</fullName>
        <description>This field is used in Award Trigger</description>
        <formula>BudgetPeriod__r.BudgetStartDate__c</formula>
        <label>Budget Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BudgetPeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Period</label>
        <referenceTo>BudgetPeriod__c</referenceTo>
        <relationshipLabel>Awards</relationshipLabel>
        <relationshipName>Awards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BudgetRevisionInitiatedByUSBE__c</fullName>
        <label>BudgetRevisionInitiatedByUSBE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Initiated By USBE</fullName>
                    <default>true</default>
                    <label>Not Initiated By USBE</label>
                </value>
                <value>
                    <fullName>Indirect Change</fullName>
                </value>
                <value>
                    <fullName>Allocation Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BudgetRevisionInitiated__c</fullName>
        <label>BudgetRevisionInitiated</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Change Requested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BudgetRevisionProgressStatus__c</fullName>
        <formula>IF(
	OR(CurrentRevisionStatus__c = null, CurrentRevisionStatus__c = &apos;Active&apos;, CurrentRevisionStatus__c = &apos;Not Started&apos;)
	, &apos;Budget revision not in progress&apos;
	, &apos;Budget revision in progress&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BudgetRevisionProgressStatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BudgetStartEndDate__c</fullName>
        <formula>IF(AND(NOT(ISBLANK(BudgetPeriod__r.BudgetStartDate__c )),NOT(ISBLANK(BudgetPeriod__r.BudgetEndDate__c))),TEXT(MONTH( BudgetPeriod__r.BudgetStartDate__c ))+&quot;/&quot; +TEXT(DAY(BudgetPeriod__r.BudgetStartDate__c))+&quot;/&quot; +TEXT(YEAR(BudgetPeriod__r.BudgetStartDate__c))+&quot;--&quot;+ TEXT(MONTH( BudgetPeriod__r.BudgetEndDate__c ))+&quot;/&quot; +TEXT(DAY(BudgetPeriod__r.BudgetEndDate__c))+&quot;/&quot; +TEXT(YEAR(BudgetPeriod__r.BudgetEndDate__c)),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BureauChief__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bureau Chief</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Awards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CAGENumber__c</fullName>
        <label>CAGE Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFDANumber__c</fullName>
        <inlineHelpText>Catalog of Federal Domestic Assistance</inlineHelpText>
        <label>CFDA Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CashMatchRollUp__c</fullName>
        <label>CashMatchRollUp</label>
        <summarizedField>AwardBudgetCategory__c.CashMatch__c</summarizedField>
        <summaryForeignKey>AwardBudgetCategory__c.Award__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CashMatch__c</fullName>
        <label>CashMatch</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CertificationAgreed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certification Agreed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CertificationDecision__c</fullName>
        <label>Certificate Terms and Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I read the terms and agree</fullName>
                </value>
                <value>
                    <fullName>I read the terms and do not agree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CertificationDisagreed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certification Disagreed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certifications__c</fullName>
        <label>Certifications</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City Name</description>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloseoutCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closeout Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CompensationDecision__c</fullName>
        <label>Compensation Decision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comptroller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Comptroller</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Awards5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CongressionalDistrictCode__c</fullName>
        <label>Congressional District Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CongressionalDistrictName__c</fullName>
        <label>Congressional District Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <defaultValue>&apos;USA&apos;</defaultValue>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentAllocatedAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CurrentAllocatedAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentAmount__c</fullName>
        <formula>DirectAmount__c + IndirectAmount__c + TotalBudgetAdjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Awarded This Budget Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentApprovedBudgetSumRound__c</fullName>
        <formula>CurrentApprovedBudgetSum__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CurrentApprovedBudgetSumRound</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentApprovedBudgetSum__c</fullName>
        <label>CurrentApprovedBudgetSum</label>
        <summarizedField>AwardBudgetCategory__c.CurrentApprovedBudgetAmount__c</summarizedField>
        <summaryForeignKey>AwardBudgetCategory__c.Award__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CurrentBudgetRevisionId__c</fullName>
        <label>CurrentBudgetRevisionId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentRevisionNumber__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Index number of the current budget revision</description>
        <label>CurrentRevisionNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentRevisionStatus__c</fullName>
        <defaultValue>&quot;Not Started&quot;</defaultValue>
        <label>CurrentRevisionStatus</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentUserIsGrantor__c</fullName>
        <formula>IF(OR($User.ProfileName__c = &apos;SPI&apos;, $User.ProfileName__c = &apos;SPA&apos;, $User.ProfileName__c = &apos;System Administrator&apos;),
FALSE,
TRUE
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CurrentUserIsGrantor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DUNSNumber__c</fullName>
        <formula>Grant__r.DUNSNumber__c</formula>
        <label>DUNS#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataEvaluator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data Evaluator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Awards33</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DeepCloned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deep Cloned</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>